--- a/application/admin/view/user/agent_list.html
+++ b/application/admin/view/user/agent_list.html
@@ -152,7 +152,7 @@
                 </select>
             </div>
             <button class="layui-btn"  lay-submit="" lay-filter="sreach">查询</button>
-            <a href="/admin/User/agent_list"  class="layui-btn layui-btn-normal">重置</a>
+            <a href="{$_SERVER['REQUEST_URI']}"  class="layui-btn layui-btn-normal">重置</a>
             <a href="{:url('admin/Api/excel_agent_list',input('get.'))}"  class="layui-btn" style="background-color: #337AB7">导出</a>
         </form>
     </div>
