--- a/application/agent/view/login/login.html
+++ b/application/agent/view/login/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>内部学习系统</title>
+	<title>{$GLOBALS['title']}</title>
 	<meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
@@ -18,7 +18,7 @@
 <body class="login-bg">
     
     <div class="login layui-anim layui-anim-up">
-        <div class="message">内部学习系统代理后台管理系统</div>
+        <div class="message">{$GLOBALS['title']}</div>
         <div id="darkbannerwrap"></div>
         
         <form method="post" class="layui-form" >
